# twitch-rs

./: Cargo.toml
examples/: category_search.rs  channel_search.rs  get_clips.rs  get_clips_by_broadcaster.rs
src/: client.rs  lib.rs  util.rs
src/api/: mod.rs
src/api/helix/: mod.rs  pagination.rs  result.rs
src/api/helix/clips/: get.rs  mod.rs
src/api/helix/search/: category.rs  channel.rs  mod.rs
src/auth/: client_credentials.rs  mod.rs  static_token.rs
